salesforce-healthcare-demo/force-app/main/default/objects/Clinical_Note__c/Clinical_Note__c.object-meta.xml
<CustomObject>
    <description>Individual clinical note entries on a patient chart</description>
    <label>Clinical Note</label>
    <nameField>
        <displayFormat>Note-{00000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>