salesforce-healthcare-demo/force-app/main/default/objects/Clinical_Note__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>