salesforce-healthcare-demo/force-app/main/default/objects/Clinical_Note__c/fields/Noted_At__c.field-meta.xml
<CustomField>
    <fullName>Noted_At__c</fullName>
    <label>Noted At</label>
    <type>DateTime</type>
</CustomField>