salesforce-healthcare-demo/force-app/main/default/objects/Clinical_Note__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Clinical Notes</relationshipLabel>
    <relationshipName>PatientClinicalNotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>