salesforce-healthcare-demo/force-app/main/default/objects/Clinical_Note__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinician</fullName>
                <default>true</default>
                <label>Clinician</label>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>